Module apps : Mise en place de la gestion des applications et des cles API (11 endpoints)